Fix inter-service communication, JWT validation, and gateway routing issues