@@ -1,6 +1,7 @@
 package com.getset.gateway.config;
 
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.Primary;
 import org.springframework.cloud.gateway.filter.ratelimit.KeyResolver;
 import org.springframework.cloud.gateway.filter.ratelimit.RedisRateLimiter;
 import org.springframework.cloud.gateway.route.RouteLocator;
@@ -32,135 +33,148 @@ import java.util.UUID;
 @Configuration
 public class GatewayConfig {
 
-    @Value("${services.user-service.url:http://localhost:8081}")
-    private String userServiceUrl;
+        @Value("${services.user-service.url:http://localhost:8081}")
+        private String userServiceUrl;
 
-    @Value("${services.property-service.url:http://localhost:8082}")
-    private String propertyServiceUrl;
+        @Value("${services.property-service.url:http://localhost:8082}")
+        private String propertyServiceUrl;
 
-    @Value("${services.enquiry-service.url:http://localhost:8083}")
-    private String enquiryServiceUrl;
+        @Value("${services.enquiry-service.url:http://localhost:8083}")
+        private String enquiryServiceUrl;
 
-    @Value("${services.message-service.url:http://localhost:8084}")
-    private String messageServiceUrl;
+        @Value("${services.message-service.url:http://localhost:8084}")
+        private String messageServiceUrl;
 
-    @Value("${services.notification-service.url:http://localhost:8085}")
-    private String notificationServiceUrl;
+        @Value("${services.notification-service.url:http://localhost:8085}")
+        private String notificationServiceUrl;
 
-    @Value("${services.favorite-service.url:http://localhost:8086}")
-    private String favoriteServiceUrl;
+        @Value("${services.favorite-service.url:http://localhost:8086}")
+        private String favoriteServiceUrl;
 
-    @Value("${gateway.allowed-origins:http://localhost:3000,http://localhost:5173}")
-    private String allowedOriginsStr;
+        @Value("${gateway.allowed-origins:http://localhost:3000,http://localhost:5173}")
+        private String allowedOriginsStr;
 
-    @Bean
-    public RedisRateLimiter authRateLimiter() {
-        return new RedisRateLimiter(20, 10, 60);
-    }
+        @Bean
+        public RedisRateLimiter authRateLimiter() {
+                return new RedisRateLimiter(20, 20); // allow 20 requests per minute
+        }
 
-    @Bean
-    public RedisRateLimiter apiRateLimiter() {
-        return new RedisRateLimiter(60, 20, 60);
-    }
+        @Bean
+        @Primary
+        public RedisRateLimiter apiRateLimiter() {
+                return new RedisRateLimiter(20, 60); // 20 tokens/sec, max 60 burst
+        }
 
-    @Bean
-    public KeyResolver ipKeyResolver() {
-        return exchange -> Mono.just(
-                exchange.getRequest().getRemoteAddress() != null
-                        ? exchange.getRequest().getRemoteAddress().getAddress().getHostAddress()
-                        : "unknown");
-    }
+        @Bean
+        public KeyResolver ipKeyResolver() {
+                return exchange -> Mono.just(
+                                exchange.getRequest().getRemoteAddress() != null
+                                                ? exchange.getRequest().getRemoteAddress().getAddress().getHostAddress()
+                                                : "unknown");
+        }
 
-    @Bean
-    public RouteLocator gatewayRoutes(RouteLocatorBuilder builder) {
-        return builder.routes()
+        @Bean
+        public RouteLocator gatewayRoutes(RouteLocatorBuilder builder) {
+                return builder.routes()
 
-                // ── User Service ─────────────────────────────────────────────────
-                .route("user-service-auth", r -> r
-                        .path("/api/v1/auth/**")
-                        .filters(f -> f
-                                .addRequestHeader("X-Gateway-Request-Id", UUID.randomUUID().toString())
-                                .requestRateLimiter(rl -> rl
-                                        .setRateLimiter(authRateLimiter()).setKeyResolver(ipKeyResolver()))
-                                .circuitBreaker(cb -> cb
-                                        .setName("user-circuit-breaker")
-                                        .setFallbackUri("forward:/fallback/auth")))
-                        .uri(userServiceUrl))
+                                // ── User Service ─────────────────────────────────────────────────
+                                .route("user-service-auth", r -> r
+                                                .path("/api/v1/auth/**")
+                                                .filters(f -> f
+                                                                .addRequestHeader("X-Gateway-Request-Id",
+                                                                                UUID.randomUUID().toString())
+                                                                .requestRateLimiter(rl -> rl
+                                                                                .setRateLimiter(authRateLimiter())
+                                                                                .setKeyResolver(ipKeyResolver()))
+                                                                .circuitBreaker(cb -> cb
+                                                                                .setName("user-circuit-breaker")
+                                                                                .setFallbackUri("forward:/fallback/auth")))
+                                                .uri(userServiceUrl))
 
-                // ── Property Service ────────────────────────────────────────────
-                .route("property-service", r -> r
-                        .path("/api/v1/properties/**")
-                        .filters(f -> f
-                                .addRequestHeader("X-Gateway-Request-Id", UUID.randomUUID().toString())
-                                .requestRateLimiter(rl -> rl
-                                        .setRateLimiter(apiRateLimiter()).setKeyResolver(ipKeyResolver()))
-                                .circuitBreaker(cb -> cb
-                                        .setName("property-circuit-breaker")
-                                        .setFallbackUri("forward:/fallback/service")))
-                        .uri(propertyServiceUrl))
+                                // ── Property Service ────────────────────────────────────────────
+                                .route("property-service", r -> r
+                                                .path("/api/v1/properties", "/api/v1/properties/**")
+                                                .filters(f -> f
+                                                                .addRequestHeader("X-Gateway-Request-Id",
+                                                                                UUID.randomUUID().toString())
+                                                                .requestRateLimiter(rl -> rl
+                                                                                .setRateLimiter(apiRateLimiter())
+                                                                                .setKeyResolver(ipKeyResolver()))
+                                                                .circuitBreaker(cb -> cb
+                                                                                .setName("property-circuit-breaker")
+                                                                                .setFallbackUri("forward:/fallback/service")))
+                                                .uri(propertyServiceUrl))
 
-                // ── Enquiry Service ─────────────────────────────────────────────
-                .route("enquiry-service", r -> r
-                        .path("/api/v1/enquiries/**")
-                        .filters(f -> f
-                                .addRequestHeader("X-Gateway-Request-Id", UUID.randomUUID().toString())
-                                .requestRateLimiter(rl -> rl
-                                        .setRateLimiter(apiRateLimiter()).setKeyResolver(ipKeyResolver()))
-                                .circuitBreaker(cb -> cb
-                                        .setName("enquiry-circuit-breaker")
-                                        .setFallbackUri("forward:/fallback/service")))
-                        .uri(enquiryServiceUrl))
+                                // ── Enquiry Service ─────────────────────────────────────────────
+                                .route("enquiry-service", r -> r
+                                                .path("/api/v1/enquiries", "/api/v1/enquiries/**")
+                                                .filters(f -> f
+                                                                .addRequestHeader("X-Gateway-Request-Id",
+                                                                                UUID.randomUUID().toString())
+                                                                .requestRateLimiter(rl -> rl
+                                                                                .setRateLimiter(apiRateLimiter())
+                                                                                .setKeyResolver(ipKeyResolver()))
+                                                                .circuitBreaker(cb -> cb
+                                                                                .setName("enquiry-circuit-breaker")
+                                                                                .setFallbackUri("forward:/fallback/service")))
+                                                .uri(enquiryServiceUrl))
 
-                // ── Message Service ─────────────────────────────────────────────
-                .route("message-service", r -> r
-                        .path("/api/v1/messages/**")
-                        .filters(f -> f
-                                .addRequestHeader("X-Gateway-Request-Id", UUID.randomUUID().toString())
-                                .requestRateLimiter(rl -> rl
-                                        .setRateLimiter(apiRateLimiter()).setKeyResolver(ipKeyResolver()))
-                                .circuitBreaker(cb -> cb
-                                        .setName("message-circuit-breaker")
-                                        .setFallbackUri("forward:/fallback/service")))
-                        .uri(messageServiceUrl))
+                                // ── Message Service ─────────────────────────────────────────────
+                                .route("message-service", r -> r
+                                                .path("/api/v1/messages", "/api/v1/messages/**")
+                                                .filters(f -> f
+                                                                .addRequestHeader("X-Gateway-Request-Id",
+                                                                                UUID.randomUUID().toString())
+                                                                .requestRateLimiter(rl -> rl
+                                                                                .setRateLimiter(apiRateLimiter())
+                                                                                .setKeyResolver(ipKeyResolver()))
+                                                                .circuitBreaker(cb -> cb
+                                                                                .setName("message-circuit-breaker")
+                                                                                .setFallbackUri("forward:/fallback/service")))
+                                                .uri(messageServiceUrl))
 
-                // ── Notification Service ────────────────────────────────────────
-                .route("notification-service", r -> r
-                        .path("/api/v1/notifications/**")
-                        .filters(f -> f
-                                .addRequestHeader("X-Gateway-Request-Id", UUID.randomUUID().toString())
-                                .requestRateLimiter(rl -> rl
-                                        .setRateLimiter(apiRateLimiter()).setKeyResolver(ipKeyResolver()))
-                                .circuitBreaker(cb -> cb
-                                        .setName("notification-circuit-breaker")
-                                        .setFallbackUri("forward:/fallback/service")))
-                        .uri(notificationServiceUrl))
+                                // ── Notification Service ────────────────────────────────────────
+                                .route("notification-service", r -> r
+                                                .path("/api/v1/notifications", "/api/v1/notifications/**")
+                                                .filters(f -> f
+                                                                .addRequestHeader("X-Gateway-Request-Id",
+                                                                                UUID.randomUUID().toString())
+                                                                .requestRateLimiter(rl -> rl
+                                                                                .setRateLimiter(apiRateLimiter())
+                                                                                .setKeyResolver(ipKeyResolver()))
+                                                                .circuitBreaker(cb -> cb
+                                                                                .setName("notification-circuit-breaker")
+                                                                                .setFallbackUri("forward:/fallback/service")))
+                                                .uri(notificationServiceUrl))
 
-                // ── Favorite Service ────────────────────────────────────────────
-                .route("favorite-service", r -> r
-                        .path("/api/v1/favorites/**")
-                        .filters(f -> f
-                                .addRequestHeader("X-Gateway-Request-Id", UUID.randomUUID().toString())
-                                .requestRateLimiter(rl -> rl
-                                        .setRateLimiter(apiRateLimiter()).setKeyResolver(ipKeyResolver()))
-                                .circuitBreaker(cb -> cb
-                                        .setName("favorite-circuit-breaker")
-                                        .setFallbackUri("forward:/fallback/service")))
-                        .uri(favoriteServiceUrl))
+                                // ── Favorite Service ────────────────────────────────────────────
+                                .route("favorite-service", r -> r
+                                                .path("/api/v1/favorites", "/api/v1/favorites/**")
+                                                .filters(f -> f
+                                                                .addRequestHeader("X-Gateway-Request-Id",
+                                                                                UUID.randomUUID().toString())
+                                                                .requestRateLimiter(rl -> rl
+                                                                                .setRateLimiter(apiRateLimiter())
+                                                                                .setKeyResolver(ipKeyResolver()))
+                                                                .circuitBreaker(cb -> cb
+                                                                                .setName("favorite-circuit-breaker")
+                                                                                .setFallbackUri("forward:/fallback/service")))
+                                                .uri(favoriteServiceUrl))
 
-                .build();
-    }
+                                .build();
+        }
 
-    @Bean
-    public CorsWebFilter corsWebFilter() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(allowedOriginsStr.split(",")));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        config.setAllowedHeaders(List.of(HttpHeaders.AUTHORIZATION, HttpHeaders.CONTENT_TYPE,
-                "X-Requested-With", "X-Gateway-Request-Id"));
-        config.setAllowCredentials(true);
-        config.setMaxAge(3600L);
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
-        return new CorsWebFilter(source);
-    }
+        @Bean
+        public CorsWebFilter corsWebFilter() {
+                CorsConfiguration config = new CorsConfiguration();
+                config.setAllowedOrigins(Arrays.asList(allowedOriginsStr.split(",")));
+                config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+                config.setAllowedHeaders(List.of(HttpHeaders.AUTHORIZATION, HttpHeaders.CONTENT_TYPE,
+                                "X-Requested-With", "X-Gateway-Request-Id"));
+                config.setAllowCredentials(true);
+                config.setMaxAge(3600L);
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", config);
+                return new CorsWebFilter(source);
+        }
 }
